# parade

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.hypothesis/examples/6dd7979739384526/: 103b2983bd088490  148e3e0b541ca3ac  1a980690bdbab7b9  24815c52aa647e7a  26211aa2ac17e4ec  26b44260020305b0  2a1138dbbea6de4e  2a8e8828b5ca7c97  2b69ddce8d901123  2c421d5c0eaf2b98  44d16b932dfd4e34  46dc0ca556c6f6b9  470441b715b98a7d  475f5c1d5dd6c8ea  51dcf5f55fc0524c  66f25961c15fd20c  6a952e6f8ab0f4ec  743309fc92b35960  756c1874d3c0964f  79950804ab44d075  834016e17731a51c  85ffc7d002e396ef  8b88712bbbdb9418  99c09ef983756b8e  9deca249a2e53710  b1171cfe9e55e2f4  b3364e8386cdf945  d5d311ae054a7651  d62863b24ef8f23d  db52f512a01f4010  de0b402178a1ec78  e004cbc8f11702fb  e5a2ac2e22256fff  e7fa1f647f8b74bb  f6a3bc147ae85b9b  f764418d2b0ab995
.hypothesis/examples/8e9272a6c565cc24/: 13b879266b64f5e3
notes/: project_notes
parade/: models.py
tests/: test_models.py
