[tool.poetry]
name = "parade"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
hypothesis = "^6.98.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
